# cvtoolbox

./: .gitignore  README.md  check_esc_retkey.py  decorator.py  harris.py  image_preprocessing.py  image_subtract.py  kalmanfilter.py  linearregression.py  loop_detect.m  pca_data_augment.py  point.py  print_pixel_value.py  resize.py  stereo_usage.py
DLTandPnP/: Get_CameraHouse.m  Get_inital_R_T.m~  Optimize_CameraTransmat.m  Optimize_CameraTransmat.m~  Show_TransMat2.m  cabin_floor0319.mat  quatern2rotMat.m  rotMat2qRichard.m  shaore_zexiPNPtest.m  share_zexiPNP.m~
chessboard/: createchessboard.py  draw_corner.py
colormodel/: yuv_yuyv_bgr.py
colorspace/: hsv_filter.py  wtf_differenceCPPandPy.py  yuv422_yuv444_convert.py  yuv_rgb_convertion.py  yuv_yuyv_bgr.py
computationalgeometry/: calc_line_intersection.py
corner/: createchessboard.py
cppimread/: CMakeLists.txt  main.cpp
deeplearning/: pca.py
densenet_demo/: main.py
dltandpnp/: KRt_from_P.m  Show_TransMat2_Stereo.m  comp_essential_matrix_OK.m  comp_homography_matrix.m  comp_stereoRT.m  decompose_essential_matrix_OK.m  generate_observation.m  generate_stereo_observation.m  homography.m  linear_fitting.m  linear_triangulation_methods.m  motion_from_essential_choose_solution_OK.m  normalized_eight_point_solver_OK.m  normalizing_transform_OK.m  pnp_solver_ap3p.m  pnp_solver_dls.m  pnp_solver_dlt.m  pnp_solver_epnp.m  pnp_solver_p3p.m  pnp_solver_posit.m  pnp_solver_rpnp.m  pnp_solver_upnp.m  rqGivens.m  show_stereo_cam.m  show_transmat.m  solve_pnp_ap3p.m  solve_pnp_p3p_github.m  svd_pinv.m  (+1 more)
(+100 files in other folders)
